--- a/css/styles.css
+++ b/css/styles.css
@@ -48,47 +48,38 @@ a{
     text-align: center;
 }
 
-/* The navigation bar */
+/* Barra de Navegacion */
 .navbar {
     overflow: hidden;
     background-color: #0009;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-  }
+    position: fixed;
+    top: 0; 
+    width: 100%;
+}
   
-  /* Links inside the navbar */
-  .navbar a:nth-child(-n+3) {
+/* Enlaces del 1 al 3 */
+.navbar a:nth-child(-n+3) {
     float: right;
     display: block;
     padding: 1.4rem 1.6rem;
     margin-top: 1.4rem;
-    margin-right: 1.6rem;
-  }
-  
-  .navbar img:nth-child(4){
+} 
+.navbar img:nth-child(-n+3){
+    height: 4rem;
+}
+/* Efecto */
+.navbar a:hover {
+    background: #ddd;
+    color: black;
+}
+      
+/*Logo*/
+.navbar img:nth-child(4){
     float: left;
     display: block;
     padding: 14px 16px;
     
-  }
-
-  .navbar img:nth-child(-n+3){
-    height: 4rem;
-  }
-
-  .navbar img:nth-child(4){
+}
+.navbar img:nth-child(4){
     height: 10rem;
-  }
-
- 
-  /* Change background on mouse-over */
-  .navbar a:hover {
-    background: #ddd;
-    color: black;
-  }
-  
-  /* Main content */
-  .main {
-    margin-top: 100px; /* Add a top margin to avoid content overlay */
-  }
+}
